--- a/GestorDeDB/GestorDeDB.vcxproj
+++ b/GestorDeDB/GestorDeDB.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Col.cpp" />
     <ClCompile Include="Fecha.cpp" />
     <ClCompile Include="GestorDeDB.cpp" />
+    <ClCompile Include="Indice.cpp" />
     <ClCompile Include="Nodo.cpp" />
     <ClCompile Include="StringAdapter.cpp" />
     <ClCompile Include="Tabla.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Casteador.h" />
     <ClInclude Include="Col.h" />
     <ClInclude Include="Fecha.h" />
+    <ClInclude Include="Indice.h" />
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="StringAdapter.h" />
     <ClInclude Include="Tabla.h" />
